<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.olivia</groupId>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <version>3.5.11</version>
  </parent>
  <artifactId>peanut-portal-all</artifactId>
  <version>3.0.0-20251013-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>

    <module>peanut-sdk</module>
    <module>peanut-base</module>
    <module>peanut-aps</module>
    <module>peanut-gateway</module>
    <module>peanut-flow</module>
    <module>peanut-task</module>
    <module>peanut-java-model</module>
    <module>peanut-store</module>
    <module>peanut-algorithm</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <executable>${javac.path}</executable>
          <source>${java.version}</source> <!-- 开启预览特性 -->
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <fork>true</fork>
          <!--          <executable>/Users/wangbao/Library/Java/openjdk-25.0.1/Contents/Home/bin/javac</executable>-->
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.42</version>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>1.6.3</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <!-- 可选：运行时也开启预览特性（避免运行报错） -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.5</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
      <!-- 4. 配置执行插件（命令行运行 main 时用） -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>--enable-preview</argument>
            <argument>-cp</argument>
            <argument>${project.build.outputDirectory}</argument>
            <!-- 替换为你的主类路径 -->
            <argument>com.example.StringTemplateDemo</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.olivia</groupId>
        <artifactId>peanut-base</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.olivia</groupId>
        <artifactId>peanut-aps</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.olivia</groupId>
        <artifactId>peanut-sdk</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.olivia</groupId>
        <artifactId>peanut-algorithm</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.20.1</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>2.21.0</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>2.18.1</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.10.0</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.13.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.12.1</version>
      </dependency>

      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>9.4.0</version>
      </dependency>
      <dependency>
        <groupId>com.belerweb</groupId>
        <artifactId>pinyin4j</artifactId>
        <version>2.5.1</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>1.6.3</version>
      </dependency>

      <dependency>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <groupId>com.baomidou</groupId>
        <version>3.5.16</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-annotation</artifactId>
        <version>3.5.16</version>
      </dependency>
      <dependency>
        <groupId>org.locationtech.jts</groupId>
        <artifactId>jts-core</artifactId>
        <version>1.20.0</version>
      </dependency>

      <dependency>
        <artifactId>javassist</artifactId>
        <groupId>org.javassist</groupId>
        <version>3.30.2-GA</version>
      </dependency>
      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>4.32.0</version>
      </dependency>
      <dependency>
        <artifactId>h3</artifactId>
        <groupId>com.uber</groupId>
        <version>4.1.1</version>
      </dependency>
      <dependency>
        <artifactId>easyexcel</artifactId>
        <exclusions>
          <exclusion>
            <artifactId>poi</artifactId>
            <groupId>org.apache.poi</groupId>
          </exclusion>
          <exclusion>
            <artifactId>xmlbeans</artifactId>
            <groupId>org.apache.xmlbeans</groupId>
          </exclusion>
          <exclusion>
            <artifactId>poi-ooxml-schemas</artifactId>
            <groupId>org.apache.poi</groupId>
          </exclusion>
        </exclusions>
        <groupId>com.alibaba</groupId>
        <version>4.0.3</version>
      </dependency>
      <dependency>
        <artifactId>mybatis-plus-join-boot-starter</artifactId>
        <groupId>com.github.yulichang</groupId>
        <version>1.5.5</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-jsqlparser</artifactId>
        <version>3.5.16</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-extension</artifactId>
        <version>3.5.16</version>
      </dependency>

      <!--      <dependency>-->
      <!--        <artifactId>mybatis-spring-boot-starter</artifactId>-->
      <!--        <groupId>org.mybatis.spring.boot</groupId>-->
      <!--        <version>3.0.3</version>-->
      <!--      </dependency>-->

      <dependency>
        <groupId>org.aspectj</groupId>
        <artifactId>aspectjweaver</artifactId>
        <version>1.9.24</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>33.4.8-jre</version>
      </dependency>
      <dependency>
        <groupId>cn.hutool</groupId>
        <artifactId>hutool-all</artifactId>
        <version>5.8.39</version>
      </dependency>
      <dependency>
        <artifactId>lombok</artifactId>
        <groupId>org.projectlombok</groupId>
        <version>1.18.38</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <artifactId>poi</artifactId>
        <groupId>org.apache.poi</groupId>
        <version>5.4.1</version>
      </dependency>


      <!--      <dependency>-->
      <!--        <artifactId>dingtalk</artifactId>-->
      <!--        <groupId>com.aliyun</groupId>-->
      <!--        <version>2.2.33</version>-->
      <!--      </dependency>-->

      <!--      <dependency>-->
      <!--        <artifactId>app-stream-client</artifactId>-->
      <!--        <groupId>com.dingtalk.open</groupId>-->
      <!--        <version>1.3.7</version>-->
      <!--      </dependency>-->

      <dependency>
        <artifactId>ortools-java</artifactId>
        <exclusions>
          <exclusion>
            <artifactId>ortools-darwin-aarch64</artifactId>
            <groupId>com.google.ortools</groupId>
          </exclusion>
          <exclusion>
            <artifactId>ortools-darwin-x86-64</artifactId>
            <groupId>com.google.ortools</groupId>
          </exclusion>
          <exclusion>
            <artifactId>ortools-win32-x86-64</artifactId>
            <groupId>com.google.ortools</groupId>
          </exclusion>
          <exclusion>
            <groupId>com.google.ortools</groupId>
            <artifactId>ortools-linux-aarch64</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.google.ortools</groupId>
            <artifactId>ortools-linux-x86-64</artifactId>
          </exclusion>
        </exclusions>
        <groupId>com.google.ortools</groupId>
        <version>9.14.6206</version>
      </dependency>
      <dependency>
        <groupId>com.googlecode.aviator</groupId>
        <artifactId>aviator</artifactId>
        <version>5.4.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <properties>
    <java.version>26</java.version>
    <javac.path>/Users/wangbao/Library/Java/JavaVirtualMachines/openjdk-26.0.1/Contents/Home/bin/javac</javac.path>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>